--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -27,3 +27,63 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+body{
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.header{
+  display: flex;
+  font-size: 32px;
+  font-weight: 900;
+  align-items: center;
+  padding-left: 16px;
+}
+
+.sidebar{
+  display: flex;
+  width: 300px;
+  flex-shrink: 0;
+  padding: 16px;
+}
+
+.content{
+  display: flex;
+  flex-grow: 1;
+}
+
+.card-container{
+  display: flex;
+  gap: 32px;
+  padding: 48px;
+  flex-wrap: wrap;
+}
+
+.card{
+  width: 300px;
+  gap: 16px;
+}
+
+.footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a{
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+
+li{
+  margin-bottom: 16px;
+}
